# anton-periph

./: CMakeLists.txt
src/lib/BMI160/: CMakeLists.txt
src/lib/BMI160/include/BMI160/: BMI160.h  BMI160_datasheet.h  BMI160_defs.h
src/lib/BMI160/src/: BMI160.c
src/lib/BMP280/: CMakeLists.txt
src/lib/BMP280/include/BMP280/: BMP280.h
src/lib/BMP280/src/: BMP280.c
src/lib/BMP580/: CMakeLists.txt
src/lib/BMP580/include/BMP580/: BMP580.h  BMP580_datasheet.h
src/lib/BMP580/src/: BMP580.c
